fixing style on tablet size

--- a/client/src/pages/OrderToPrepare/style.css
+++ b/client/src/pages/OrderToPrepare/style.css
@@ -65,3 +65,49 @@
   justify-content: space-evenly;
   width: 100%;
 }
+
+@media screen and (max-width: 820px) {
+  .order-to-prepare-page-container {
+    width: 70%;
+  }
+  .order-to-prepare-main {
+    flex-direction: column;
+    height: auto;
+    align-items: center;
+    width: 100%;
+    padding: 0;
+  }
+  .order-to-prepare-section {
+    border-radius: 25px 25px 0 0;
+    width: 100%;
+    justify-content: center;
+  }
+  .order-ready-section {
+    border-radius: 0;
+    width: 100%;
+  }
+  .order-to-prepare-container,
+  .order-ready-container {
+    height: 300px;
+    width: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .order-complete-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+    width: 100%;
+    height: 300px;
+  }
+  .order-complete-section {
+    height: 25vh;
+    border-radius: 0 0 25px 25px;
+    width: auto;
+    margin: 0;
+  }
+}
